...
                                    setState(() {
                                      schedulerData.vaccine =
                                          vaccineData.vaccine;
                                    });
                                  },
                                  items: <String>[
                                    'Astrazeneca',
                                    'Janssen',
                                    'Moderna',
                                    'Pfizer',
                                    'Sinovac'
                                  ].map<DropdownMenuItem<String>>(
                                      (String value) {
                                    return DropdownMenuItem<String>(
                                      value: value,
                                      child: Text(value,
                                          style: TextStyle(
...
                                    vaccineData.category = newValue!;
                                    setState(() {
                                      schedulerData.category =
                                          vaccineData.category;
                                    });
                                  },
                                  items: <String>['A1', 'A2', 'A3', 'A4', 'A5']
                                      .map<DropdownMenuItem<String>>(
                                          (String value) {
                                    return DropdownMenuItem<String>(
                                      value: value,
                                      child: Text(value,
                                          style: TextStyle(
...
